stop animation flickering on header buttton

--- a/css/style.css
+++ b/css/style.css
@@ -134,6 +134,7 @@ body {
     border-radius: 100px;
     transition: all .2s;
     position: relative;
+    backface-visibility: hidden;
 }
 
 .btn:hover {
